<resources>
    <string name="app_name">ALFRED</string>
    <string name="pref_network_title">Network</string>
    <string name="pref_summary_ip_address">Local IP address of Alfred server</string>
    <string name="pref_title_ip_address">Server IP address</string>
    <string name="pref_default_ip_address">10.147.68.229:5000</string>
    <string name="main_settings">Settings</string>
    <string name="error_network">Error connecting to server.</string>
    <string name="pref_summary_secret_token">Used to authenticate to Alfred server</string>
    <string name="pref_title_secret_token">Secret token</string>
    <string name="pref_default_secret_token">JWe2fxjbR</string>
</resources>
